2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_html.php: Changed a jQuery selector
	to avoid errors.
	
	* operation/incidents/incident_detail.php: Now is possible
	to upload a file when creating a new incident.
	
2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/include/style/main.css: Deleted some styles.
	
	* mobile/operation/incident.php: Visual changes.
	
	* operation/incidents/incident_detail.php: Error fixes
	in the incident form.
	
	* operation/workorders/wo.php: Fixed an error.
	
2013-09-12  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_files.php: Fixed and error
	that didn't update the incident "actualizacion" field.

2013-09-12  Dario Rodriguez <dario@artica.es>

	* include/integria_cron.php,
	include/functions.php,
	operation/leads/lead_mail.php,
	integria_db.sql,
	extras/migrate.sql: Added new custom headers to email to 
	avoid double processing of emails with CC to collecting 
	inbox.

2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/operation/incident.php: Added the incident title
	to the incident detail section.
	
2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/include/ui.class.php: Improved the function
	"getContentEndGrid" with the posibility of select the
	theme and changed its return type. Added the function
	"addContentEndGrid". Improved the function"getEndCollapsible"
	with theme and collapsible state selection.
	
	* mobile/include/style/main.css: Added some styles.
	
	* mobile/operation/incident.php: Huge improvement in the
	in cident detail section.
	
2013-09-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_incidents.php: Fixed the url to access
	to the incident by email in the function "mail_incident".
	
	* mobile/include/ui.class.php: Changed some init values.
	
	* mobile/include/javascript/functions_incidents.mobile.js:
	Fixed an error on combo inputs in thje function